navidrome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  namespace: navidrome
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      containers:
        - name: navidrome
          image: deluan/navidrome:pr-5495
          ports:
            - containerPort: 4533
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "1000m"
              memory: "512Mi"
          volumeMounts:
            - mountPath: /data
              name: navidrome-data
            - mountPath: /music
              name: navidrome-music
              readOnly: true
      volumes:
        - name: navidrome-data
          persistentVolumeClaim:
            claimName: navidrome-data
        - name: navidrome-music
          persistentVolumeClaim:
            claimName: navidrome-music
