navidrome/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome
spec:
  selector:
    app: navidrome
  ports:
    - name: http
      port: 80
      targetPort: 4533
  type: ClusterIP
