navidrome/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: music-gateway
spec:
  selector:
    istio: gateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: navidrome-cert
      hosts:
        - music.local.gwg313.xyz
        - music.gwg313.xyz
        - music.zerotier.gwg313.xyz
